--- a/index.html
+++ b/index.html
@@ -1,1 +1,64 @@
-This is the first
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>Landing Page</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+</head>
+<body>
+    <div class="header-container">
+        <div class="logo">Header Logo</div>
+        <div class="top-links">
+            <a href="link1.html">header link one</a>
+            <a href="#">header link two</a>
+        </div>
+    </div>
+
+    <div class="header-body">
+        <div class="text-content">
+            <div class="heading-1">This website is awesome</div>
+            <div class="sign-up-button-1">
+                <a href="sign-up-button-1">Sign up</a>
+            </div>
+        </div>
+        <div class="image-placeholder">
+            <img src="https://via.placeholder.com/200" alt="Placeholder image">
+        </div>
+    </div>
+
+    <div class="main">
+        <div class="heading-2">Some random info</div>
+        <div class="img-grid">
+            <div class="grid-item">
+                <div class="grid-image"></div>
+                <div class="subtext">This is some subtext under an illustration or image</div>
+            </div>
+            <div class="grid-item">
+                <div class="grid-image"></div>
+                <div class="subtext">This is some subtext under an illustration or image</div>
+            </div>
+            <div class="grid-item">
+                <div class="grid-image"></div>
+                <div class="subtext">This is some subtext under an illustration or image</div>
+            </div>
+        </div>
+    </div>
+
+    <div class="quote">This is an inspiring quote or testimonial from a customer. Maybe it's just filling up space or maybe people will actually read it.</div>
+        <div class="quote-author">-Thor, God of Thunder</div>
+
+    <div class="sign-up">
+        <div class="sign-up-body">
+            <div class="heading-3">Call to action! It's time!</div>
+            <div class="sign-up-text">Sign up for our product by clicking that button right over there</div>
+        </div>
+        <div class="sign-up-button-container">
+            <a href="#" class="sign-up-button-container">Sign up</a>
+        </div>
+    </div>
+</body>
+</html>
